// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttonv2 Centered 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#4CAF51",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Default State 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "border": "1px solid #4CAF51",
        "color": "#4CAF50",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Disabled 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-disabled-15 MuiButtonBase-disabled-32"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#E7ECEF80",
        "border": "none",
        "color": "#cbcdcf",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Loading 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1 MuiButton-disabled-15 MuiButtonBase-disabled-32"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#4CAF51",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      <div
        className="MuiCircularProgress-root-34 MuiCircularProgress-colorPrimary-38 MuiCircularProgress-indeterminate-36"
        role="progressbar"
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-40"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-41 MuiCircularProgress-circleIndeterminate-43"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Main 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#4CAF51",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Secondary Gray 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "border": "1px #9CB2BD80 solid",
        "color": "#707070",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Secondary Line Pink 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "border": "1px #CB007B solid",
        "color": "#CB007B",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 State 6 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root-31 MuiButton-root-2 MuiButton-text-4 makeStyles-buttonStyle-0 makeStyles-buttonStyle-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#CB007B",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;
